log
Fri Mar 18 00:02:11 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
f684228
Fri Mar 18 00:03:45 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
54950c1
Fri Mar 18 00:11:55 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:5: error: 'list' undeclared (first use in this function)
     list-> head = NULL;
     ^~~~
list.c:33:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:11: error: unused variable 'lista' [-Werror=unused-variable]
     List* lista= (List*)malloc(sizeof(List));
           ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b70c44c
Fri Mar 18 00:47:18 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:5: error: 'list' undeclared (first use in this function)
     list-> head = NULL;
     ^~~~
list.c:33:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:11: error: unused variable 'lista' [-Werror=unused-variable]
     List* lista= (List*)malloc(sizeof(List));
           ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
15698e9
Fri Mar 18 00:47:38 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
67d0d54
Fri Mar 18 00:48:03 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9b0ee00
Fri Mar 18 00:49:15 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
56a35e0
Fri Mar 18 00:49:42 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
3569290
Fri Mar 18 00:51:25 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
df104ed
Fri Mar 18 00:53:48 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d4e4101
Fri Mar 18 12:05:25 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
02ebd53
Fri Mar 18 12:51:12 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
1c862bb
Fri Mar 18 12:52:04 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
da9984a
Fri Mar 18 12:52:44 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
5b374a8
